...
            Количество сыгранных квизов: \(gamesCount)
            Рекод: \(recordGame.correct)/\(recordGame.total) (\(recordGame.date.dateTimeString))
            Средняя точность: \(String(format: "%.2f", totalAccuracy))%
            """
            
            let viewModel = AlertModel(
                title: "Этот раунд окончен!",
                message: results,
                buttonText: "Сыграть еще раз",
                completion: { [weak self] _ in
                    guard let self = self else { return }
                    
                    currentQuestionIndex = 0
...
